import { render, screen, waitFor } from '@testing-library/react';
import { describe, it, expect, vi, beforeEach } from 'vitest';
import { useLiveQuery } from 'dexie-react-hooks';
import { FeedbackCard } from './FeedbackCard';
import * as Core from '@/core';
import * as Hooks from '@/hooks';

// Mock dexie-react-hooks
vi.mock('dexie-react-hooks', () => ({
  useLiveQuery: vi.fn(),
}));

// Mock Core module
vi.mock('@/core', async (importOriginal) => {
  const actual = await importOriginal<typeof import('@/core')>();
  return {
    ...actual,
    useAuthStore: vi.fn(),
    ProfileController: {
      read: vi.fn(),
    },
    FileController: {
      getAvatarUrl: vi.fn((pubky: string) => `https://cdn.example.com/avatar/${pubky}`),
    },
  };
});

// Mock Hooks module - passthrough to the real implementation but using mocked dependencies
vi.mock('@/hooks', async (importOriginal) => {
  const actual = await importOriginal<typeof import('@/hooks')>();
  return {
    ...actual,
    useCurrentUserProfile: vi.fn(),
    // useAvatarUrl will use the real implementation which calls our mocked FileController
  };
});

// Mock Molecules
vi.mock('@/molecules', () => ({
  AvatarWithFallback: ({
    avatarUrl,
    name,
    className,
    fallbackClassName,
  }: {
    avatarUrl?: string;
    name: string;
    className?: string;
    fallbackClassName?: string;
  }) => (
    <div
      data-testid="avatar-with-fallback"
      data-avatar-url={avatarUrl || 'no-url'}
      data-name={name}
      className={className}
    >
      {avatarUrl ? (
        <img data-testid="avatar-image" src={avatarUrl} alt={name} />
      ) : (
        <div data-testid="avatar-fallback" className={fallbackClassName}>
          {name.charAt(0)}
        </div>
      )}
    </div>
  ),
}));

// Mock Atoms
vi.mock('@/atoms', async (importOriginal) => {
  const actual = await importOriginal<typeof import('@/atoms')>();
  return {
    ...actual,
    Container: ({
      children,
      className,
      'data-testid': dataTestId,
      ...props
    }: {
      children: React.ReactNode;
      className?: string;
      'data-testid'?: string;
      [key: string]: unknown;
    }) => (
      <div data-testid={dataTestId || 'container'} className={className} {...props}>
        {children}
      </div>
    ),
    Button: ({
      children,
      className,
      ...props
    }: {
      children: React.ReactNode;
      className?: string;
      [key: string]: unknown;
    }) => (
      <button data-testid="button" className={className} {...props}>
        {children}
      </button>
    ),
    Heading: ({
      children,
      level,
      size,
      className,
    }: {
      children: React.ReactNode;
      level?: number;
      size?: string;
      className?: string;
    }) => (
      <div data-testid="heading" data-level={level} data-size={size} className={className}>
        {children}
      </div>
    ),
  };
});

// Mock Libs - use actual truncateString implementation
vi.mock('@/libs', async (importOriginal) => {
  const actual = await importOriginal<typeof import('@/libs')>();
  return {
    ...actual,
    truncateString: (str: string, maxLength: number): string => {
      if (!str) return '';
      if (str.length <= maxLength) return str;
      return `${str.slice(0, maxLength)}...`;
    },
  };
});

describe('FeedbackCard', () => {
  const mockPubky = 'user123pubky';
  const mockUseLiveQuery = vi.mocked(useLiveQuery);
  const mockUseAuthStore = vi.mocked(Core.useAuthStore);
  const mockUseCurrentUserProfile = vi.mocked(Hooks.useCurrentUserProfile);

  beforeEach(() => {
    vi.clearAllMocks();
    // Make useCurrentUserProfile delegate to the existing mocks
    mockUseCurrentUserProfile.mockImplementation(() => {
      const { currentUserPubky } = mockUseAuthStore() as { currentUserPubky: string | null };
      const userDetails = mockUseLiveQuery(() => null, []);
      return { userDetails, currentUserPubky };
    });
  });

  describe('User Authentication', () => {
    it('renders with authenticated user with avatar image', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        id: mockPubky,
        name: 'Miguel Medeiros',
        image: 'avatar.jpg',
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('feedback-card')).toBeInTheDocument();
      });

      const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
      expect(avatarWithFallback).toHaveAttribute('data-avatar-url', `https://cdn.example.com/avatar/${mockPubky}`);
      expect(avatarWithFallback).toHaveAttribute('data-name', 'Miguel Medeiros');

      // Check that the displayed name is truncated
      expect(screen.getByText('Miguel Med...')).toBeInTheDocument();
    });

    it('renders with authenticated user without avatar image', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'Miguel Medeiros',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
        expect(avatarWithFallback).toHaveAttribute('data-avatar-url', 'no-url');
        expect(screen.getByTestId('avatar-fallback')).toBeInTheDocument();
        expect(screen.getByTestId('avatar-fallback')).toHaveTextContent('M');
      });
    });

    it('renders with default name when user is not authenticated', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
      mockUseLiveQuery.mockReturnValue(null as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
        expect(avatarWithFallback).toHaveAttribute('data-name', 'Your Name');
      });
    });

    it('renders with default name when userDetails is null', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue(null as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('avatar-with-fallback')).toHaveAttribute('data-name', 'Your Name');
      });
    });
  });

  describe('Name Truncation', () => {
    it('truncates long names to 10 characters in display', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'VeryLongUserName',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        // Avatar receives full name
        const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
        expect(avatarWithFallback).toHaveAttribute('data-name', 'VeryLongUserName');

        // But display text is truncated
        expect(screen.getByText('VeryLongUs...')).toBeInTheDocument();
      });
    });

    it('does not truncate names shorter than 10 characters', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'John',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
        expect(avatarWithFallback).toHaveAttribute('data-name', 'John');
        expect(screen.getByText('John')).toBeInTheDocument();
      });
    });

    it('handles exactly 10 character names', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: '1234567890',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
        expect(avatarWithFallback).toHaveAttribute('data-name', '1234567890');
        expect(screen.getByText('1234567890')).toBeInTheDocument();
      });
    });
  });

  describe('Avatar Handling', () => {
    it('shows avatar image when user has image', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'Miguel',
        image: 'has-image.jpg',
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('avatar-image')).toBeInTheDocument();
      });
    });

    it('shows avatar fallback when user has no image', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'Miguel',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('avatar-fallback')).toBeInTheDocument();
        expect(screen.getByTestId('avatar-fallback')).toHaveTextContent('M');
      });
    });

    it('does not call getAvatarUrl when image is not available', async () => {
      const mockGetAvatarUrl = vi.mocked(Core.FileController.getAvatarUrl);
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'Miguel',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('avatar-fallback')).toBeInTheDocument();
      });

      // Should not be called because image is null
      expect(mockGetAvatarUrl).not.toHaveBeenCalled();
    });

    it('calls getAvatarUrl with correct pubky when image exists', async () => {
      const mockGetAvatarUrl = vi.mocked(Core.FileController.getAvatarUrl);
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        id: mockPubky,
        name: 'Miguel',
        image: 'avatar.jpg',
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(mockGetAvatarUrl).toHaveBeenCalledWith(mockPubky);
      });
    });

    it('does not call getAvatarUrl when currentUserPubky is null', async () => {
      const mockGetAvatarUrl = vi.mocked(Core.FileController.getAvatarUrl);
      mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
      mockUseLiveQuery.mockReturnValue(null as never); // When no pubky, userDetails should be null

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('feedback-card')).toBeInTheDocument();
      });

      expect(mockGetAvatarUrl).not.toHaveBeenCalled();
    });
  });

  describe('UI Structure', () => {
    it('renders feedback heading correctly', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
      mockUseLiveQuery.mockReturnValue(null as never);

      render(<FeedbackCard />);

      const heading = screen.getByText('Feedback');
      expect(heading).toBeInTheDocument();
      expect(heading).toHaveClass('font-light', 'text-muted-foreground');
    });

    it('renders feedback question button', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
      mockUseLiveQuery.mockReturnValue(null as never);

      render(<FeedbackCard />);

      const button = screen.getByTestId('button');
      expect(button).toHaveTextContent('What do you think about Pubky?');
      expect(button).toHaveClass('text-left', 'text-base', 'leading-normal', 'font-medium', 'text-muted-foreground');
    });

    it('applies correct container classes', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
      mockUseLiveQuery.mockReturnValue(null as never);

      render(<FeedbackCard />);

      const container = screen.getByTestId('feedback-card');
      expect(container).toHaveClass('flex', 'flex-col', 'gap-2');
    });

    it('applies correct avatar container classes', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockReturnValue({
        name: 'Miguel',
        image: null,
      } as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        const avatarWithFallback = screen.getByTestId('avatar-with-fallback');
        expect(avatarWithFallback).toHaveClass('h-12', 'w-12');
      });
    });
  });

  describe('Data Flow', () => {
    it('fetches user details when currentUserPubky is available', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
      mockUseLiveQuery.mockImplementation((callback) => {
        callback();
        return { name: 'Miguel', image: null } as never;
      });

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(mockUseLiveQuery).toHaveBeenCalled();
      });
    });

    it('does not fetch user details when currentUserPubky is null', async () => {
      mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
      mockUseLiveQuery.mockReturnValue(null as never);

      render(<FeedbackCard />);

      await waitFor(() => {
        expect(screen.getByTestId('feedback-card')).toBeInTheDocument();
      });
    });
  });
});

describe('FeedbackCard - Snapshots', () => {
  const mockPubky = 'user123pubky';
  const mockUseLiveQuery = vi.mocked(useLiveQuery);
  const mockUseAuthStore = vi.mocked(Core.useAuthStore);
  const mockUseCurrentUserProfile = vi.mocked(Hooks.useCurrentUserProfile);

  beforeEach(() => {
    vi.clearAllMocks();
    // Make useCurrentUserProfile delegate to the existing mocks
    mockUseCurrentUserProfile.mockImplementation(() => {
      const { currentUserPubky } = mockUseAuthStore() as { currentUserPubky: string | null };
      const userDetails = mockUseLiveQuery(() => null, []);
      return { userDetails, currentUserPubky };
    });
  });

  it('matches snapshot with authenticated user with avatar', async () => {
    mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
    mockUseLiveQuery.mockReturnValue({
      id: mockPubky,
      name: 'Miguel Medeiros',
      image: 'avatar.jpg',
    } as never);

    const { container } = render(<FeedbackCard />);

    await waitFor(() => {
      expect(screen.getByTestId('avatar-image')).toBeInTheDocument();
    });

    expect(container.firstChild).toMatchSnapshot();
  });

  it('matches snapshot with authenticated user without avatar', async () => {
    mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
    mockUseLiveQuery.mockReturnValue({
      name: 'Miguel',
      image: null,
    } as never);

    const { container } = render(<FeedbackCard />);

    await waitFor(() => {
      expect(screen.getByTestId('avatar-fallback')).toBeInTheDocument();
    });

    expect(container.firstChild).toMatchSnapshot();
  });

  it('matches snapshot with unauthenticated user', async () => {
    mockUseAuthStore.mockReturnValue({ currentUserPubky: null } as never);
    mockUseLiveQuery.mockReturnValue(null as never);

    const { container } = render(<FeedbackCard />);

    await waitFor(() => {
      expect(screen.getByTestId('feedback-card')).toBeInTheDocument();
    });

    expect(container.firstChild).toMatchSnapshot();
  });

  it('matches snapshot with truncated long name', async () => {
    mockUseAuthStore.mockReturnValue({ currentUserPubky: mockPubky } as never);
    mockUseLiveQuery.mockReturnValue({
      name: 'VeryLongUserNameThatExceedsTenCharacters',
      image: null,
    } as never);

    const { container } = render(<FeedbackCard />);

    await waitFor(() => {
      expect(screen.getByTestId('avatar-fallback')).toBeInTheDocument();
    });

    expect(container.firstChild).toMatchSnapshot();
  });
});
