// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedbackCard - Snapshots > matches snapshot with authenticated user with avatar 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="https://cdn.example.com/avatar/user123pubky"
          data-name="Miguel Medeiros"
          data-testid="avatar-with-fallback"
        >
          <img
            alt="Miguel Medeiros"
            data-testid="avatar-image"
            src="https://cdn.example.com/avatar/user123pubky"
          />
        </div>
      </div>
      <div
        class="text-base font-bold text-foreground"
        data-testid="container"
      >
        Miguel Med...
      </div>
    </div>
    <button
      class="cursor-pointer text-left text-base leading-normal font-medium break-all text-muted-foreground hover:text-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with authenticated user without avatar 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="no-url"
          data-name="Miguel"
          data-testid="avatar-with-fallback"
        >
          <div
            class="text-sm"
            data-testid="avatar-fallback"
          >
            M
          </div>
        </div>
      </div>
      <div
        class="text-base font-bold text-foreground"
        data-testid="container"
      >
        Miguel
      </div>
    </div>
    <button
      class="cursor-pointer text-left text-base leading-normal font-medium break-all text-muted-foreground hover:text-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with truncated long name 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="no-url"
          data-name="VeryLongUserNameThatExceedsTenCharacters"
          data-testid="avatar-with-fallback"
        >
          <div
            class="text-sm"
            data-testid="avatar-fallback"
          >
            V
          </div>
        </div>
      </div>
      <div
        class="text-base font-bold text-foreground"
        data-testid="container"
      >
        VeryLongUs...
      </div>
    </div>
    <button
      class="cursor-pointer text-left text-base leading-normal font-medium break-all text-muted-foreground hover:text-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with unauthenticated user 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="no-url"
          data-name="Your Name"
          data-testid="avatar-with-fallback"
        >
          <div
            class="text-sm"
            data-testid="avatar-fallback"
          >
            Y
          </div>
        </div>
      </div>
      <div
        class="text-base font-bold text-foreground"
        data-testid="container"
      >
        Your Name
      </div>
    </div>
    <button
      class="cursor-pointer text-left text-base leading-normal font-medium break-all text-muted-foreground hover:text-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;
